--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="wrapper">
 		<div class="contents">
 			<h1>Lorem Ipsumm</h1>
-			<img src="https://picsum.photos/600/300" alt="Lorem">
+			<img src="https://picsum.photos/600/300" alt="Lorem Ipsum">
 		</div>
 	</div>
 	
